config: change cors config & ignore preflight request in JwtAuthenticationFilter